# sdg-auditing

./: Auditing USE CASE 1.ipynb  Auditing USE CASE 2.ipynb  Auditing USE CASE 3.ipynb  Generating all non-tailored datasets.ipynb  README.md  Use Case 1.ipynb  Use Case 2.ipynb  Use Case 3.ipynb  auditing.py  metadata.json  pyproject.toml  raw_ipf.py  utils.py
