[tool.poetry]
name = "utility-rss"
version = "0.1.0"
description = ""
authors = ["fhoussiau <fhoussiau@turing.ac.uk>"]
readme = "README.md"
packages = [{include = "utility_rss"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
jupyter = "^1.0.0"
statsmodels = "^0.13.2"
reprosyn = {git = "https://github.com/alan-turing-institute/reprosyn", rev = "fc9c379d9af6af30cbdcd23faeb3d92a1d76cccc"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
